link_libraries("${LINK_LIB_PREFIX}" gtest gtest_main glog zmq gflags boost_system mpi "${LINK_LIB_SUFFIX}")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0 -g")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O0 -g")

add_executable(utils_queue_test utils_queue.cpp)
add_executable(utils_barrier_test utils_barrier.cpp)
add_executable(utils_asynexec_test utils_asynexec.cpp)
add_executable(utils_buffer_test utils_buffer.cpp)
add_executable(utils_string_test utils_string.cpp)
add_executable(utils_env_util_test utils_env_util.cpp)
add_executable(utils_mpi_test utils_mpi.cpp)
add_executable(utils_spinlock_test utils_spinlock.cpp)
add_executable(utils_rwlock_test utils_rwlock.cpp)
